add hover pointer to the button

--- a/index_pc.html
+++ b/index_pc.html
@@ -79,7 +79,7 @@
             <div class="rewards_text">
               <h5 class="reward_item_title">$5 coffee voucher</h5>
               <p class="card-text">2000 points</p>
-              <button type="button" name="button">Claim it!</button>
+              <button class="btn" type="button" name="button">Claim it!</button>
             </div>
           </li>
         </ul>
