Fix layout so fits demo laptop

--- a/index_pc.html
+++ b/index_pc.html
@@ -46,13 +46,13 @@
         Oh My Posture!
       </div>
     </menu>
-    <div id="posture" class="body_container hide tile">
+    <div id="posture" class="hide tile">
       <h1 class="posture-warning">Dear Tim, </h1>
       <h2 class="posture-warning">According to our analysis, your posture today looks like this.</h2>
       <img src="./assets/bad_posture.jpg" alt="">
     </div>
     <div id="main-layout" class="body_container">
-      <div class="tile posture_today">
+      <div class="tile posture_today dashboard_content">
         <h5 class="card-title">Your posture today</h5>
         <div class="progress">
           <div class="progress-bar"></div>
@@ -60,12 +60,12 @@
         <p class="number-highlight">62%</p>
         <p class="card-text-bigger card-text">God you are awful</p>
       </div>
-      <div class="tile points">
+      <div class="tile points dashboard_content">
         <h5 class="card-title">Your points</h5>
           <p class="number-highlight">653</p>
           <p class="card-text-bigger">50 earned today. <br> Keep going, you lazy ass!</p>
       </div>
-      <div class="tile rewards">
+      <div class="tile rewards dashboard_content">
         <div class="card-title">
           Rewards Earned: 12
         </div>
