Add link to setup from settings menu

--- a/index_pc.html
+++ b/index_pc.html
@@ -36,7 +36,7 @@
       </div>
       <div class="menu_section">
         <ul>
-          <li><a href="#">
+          <li><a href="setup.html">
             <img src="assets\settings_icon.png" alt="">
             Settings
           </a></li>
